--- a/src/app/random-roulette/random-roulette.component.css
+++ b/src/app/random-roulette/random-roulette.component.css
@@ -1,26 +1,26 @@
 .roulette-container {
+  aspect-ratio: 1 / 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 400px;
-  width: 400px;
+  width: 100%;
 }
 
 .roulette-selector {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   position: absolute;
   clip-path: polygon(48% 0, 50% 8%, 52% 0);
   background: var(--gray-900);
   transform: rotate(270deg);
-  left: 7%;
+  left: -5%;
 }
 
 .roulette-wheel {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
   position: relative;
   overflow: hidden;
