--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,4 +2,5 @@
   <p>landing-page works!</p>
   <a routerLink="roulette-decide">Link to roulette</a>
   <a routerLink="mine-sweeper">Link to Mine Sweeper</a>
+  <a routerLink="hangman">Link to Hangman</a>
 </div>
