Created the spotify service and component

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
-<div class="">
+<div class>
   <p>landing-page works!</p>
   <a routerLink="roulette-decide">Link to roulette</a>
   <a routerLink="mine-sweeper">Link to Mine Sweeper</a>
   <a routerLink="hangman">Link to Hangman</a>
+  <a routerLink="spotify-player">Link to Spotify Player</a>
 </div>
